--- a/views/_aside.pug
+++ b/views/_aside.pug
@@ -82,7 +82,7 @@ aside.sidebar
 
   .user-account
     .user-profile
-      img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
+      img(src=`/uploads/users/${user.photo}` alt=`Photo of ${user.name}`)
       .user-details
         h3= user.name.split(' ')[0]
         span= user.role
