--- a/views/home.pug
+++ b/views/home.pug
@@ -13,7 +13,7 @@ block content
           a.btn(href="/contact" data-btn) GET IN TOUCH
           .hero-banner
             .hero-banner-inner 
-              img(src=`/img/users/${me.photo}`)
+              img(src=`/uploads/users/${me.photo}`)
             //- img(src="./img/hero-banner.png" width="850" height="414" alt="hero banner" class="w-100")
             img(src="./img/hero-banner-bg.png" alt="" class="hero-banner-bg")
       
@@ -40,7 +40,7 @@ block content
                   strong I would recommend Udodirim in a heartbeat.
               span.quote-icon.closing ”
             .author
-              img(src="./img/users/user-1.jpg" alt="John Doe Jr.")
+              img(src=`/uploads/users/${user.photo}` alt="John Doe Jr.")
               p
                 strong John Doe Jr.,
                 br
@@ -49,7 +49,7 @@ block content
 
           .testimonial-content(data-reveal="bottom")
             .author
-              img(src="./img/users/user-1.jpg" alt="John Doe Jr.")
+              img(src=`/uploads/users/${user.photo}` alt="John Doe Jr.")
               p
                 strong John Doe Jr.,
                 br
