--- a/views/pay-success.pug
+++ b/views/pay-success.pug
@@ -15,5 +15,5 @@ block content
               form.redirect-form
                 input#redirect-email(type="hidden", name="buyerEmail", value=buyerEmail)
                 input#item(type="hidden", name="purchaseId", value=item)
-                p If you're not redirected in 5 seconds,
+                p#counter If you're not redirected in 5 seconds,
                 button(type="submit", class="redirect-btn") Click Here
