--- a/views/admin-dashboard.pug
+++ b/views/admin-dashboard.pug
@@ -5,7 +5,7 @@ block content
     h2 Dashboard 
     section#dashboard
       .info 
-        img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
+        img(src=`/uploads/users/${user.photo}` alt=`Photo of ${user.name}`)
         .cards
           span= `Name: ${user.name}` 
           p= `Username: ${user.username}` 
