--- a/views/admin-profile.pug
+++ b/views/admin-profile.pug
@@ -18,8 +18,7 @@ block content
           label(for="forImg") 
           input#forImg(type="file" accept='image/*' name='photo')
         .post-group 
-          img#imgForImg(src=`/img/users/${user.photo}` alt=`A photo of ${user.title}`)
-          //- img#imgForImg(src=`/img/users/user-1.jpg` alt=`A photo of`)
+          img#imgForImg(src=`/uploads/users/${user.photo}` alt=`A photo of ${user.title}`)
         .post-group 
           button(type="submit") Update
 
