--- a/views/editProject.pug
+++ b/views/editProject.pug
@@ -36,14 +36,14 @@ block content
             br
             input#desktop-img(type="file" name="desktopImg", required)
             .cover-img
-              img#desktop-img-view(src= project ? `/img/projects/${project.desktopImg}` : '/img/svg/upload.svg' alt="")
+              img#desktop-img-view(src= project ? `/uploads/projects/${project.desktopImg}` : '/img/svg/upload.svg' alt="")
 
           .post-mobile 
             label(for="mobile-img" aria-label="upload image") Mobile View
             br
             input#mobile-img(type="file" name="mobileImg", required)
             .cover-img
-              img#mobile-img-view(src= project ? `/img/projects/${project.mobileImg}` : '/img/svg/upload.svg' alt="")
+              img#mobile-img-view(src= project ? `/uploads/projects/${project.mobileImg}` : '/img/svg/upload.svg' alt="")
 
         .post-group
           button(type="submit") Update
